<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WFC</string>
    <string name="action_settings">Settings</string>
    <string name="info_button_text">Information</string>
    <string name="main_title_text">World Fashion Centre</string>
    <string name="maps_title_text">Outdoor Navigation</string>
    <string name="rent_title_text">Rent</string>
    <string name="info_title_text">Information</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_activityDetails">Details facilities</string>
    <string name="history_text">Ruim 40 jaar is het World Fashion Centre ‘the meeting point’ voor de internationale modebusiness. Er bestaat geen enkele fashion locatie van deze allure in Nederland, waar modemerken, winkels en groothandel elkaar kunnen ontmoeten, zaken doen en de nieuwste modetrends uitwisselen. </string>
    <string name="history_title">History</string>
    <string name="mijlpaal_title">Milestones</string>
    <string name="mijlpaal_text">1968 Opening World Fashion Centre (WFC)\n\n1977 Eerste uitbreiding WFC: Toren 3\n\n1993 Nieuw initiatief voor WFC-experience: opening Fashion Garden\n\n2002 Opening parkeergarage\n\n2005 Vernieuwing centrale hal en opening eventlocatie Beursplaza\n\n2008 40-jarig jubileum: terugblik en viering van 40 jaar fashion in WFC</string>
    <string name="management_title">WFC Management</string>
    <string name="management_text">Het World Fashion Centre-managementteam staat altijd garant voor bezoekers én showroomhouders. Onze professionaliteit, service, expertise en creativiteit zorgen voor een optimale samenwerking met showroomhouders. Wij zorgen voor de voorwaarden, waardoor de showroomhouders zichzelf optimaal kunnen presenteren: qua ruimte, faciliteiten en sfeer. Daarnaast bieden wij de overall service aan bezoekers, zodat zij graag en veelvuldig het World Fashion Centre bezoeken. Wij besteden veel aandacht aan de ontvangst, de verzorging van de exclusieve WFC-toegangspas en de overige faciliteiten, waardoor een bezoek aan WFC als zeer aangenaam wordt ervaren.</string>
    <string name="rent_button_text">Rent</string>
    <string name="facilities_button_text">Facilities</string>
    <string name="navigation_button_text">Navigation</string>
    <string name="bezoekadres_title">Visit address</string>
    <string name="bezoekadres_text">Koningin Wilhelminaplein 13\n1062 HH  Amsterdam\nThe Netherlands\n\nToren 2\nEtage 8\nRuimte 6\n</string>

    //strings activity_facilities
    <string name="customRowText_Medium">Medium Text</string>
    <string name="customTextRow_Small">Small Text</string>
    <string name="customImage_view">customImageView</string>
    <string name="search_facility_bar_placeholder">Search facility</string>
    <string name="title_activity_facilities">Facilities</string>
    <string name="main_banner_text">WFC App</string>
    <string name="title_activity_facility_rent">FacilityRentActivity</string>
    <string name="title_activity_rent_adapter">RentAdapter</string>
    <string name="title_activity_facilities_rent_details">FacilitiesRentDetails</string>
    <string name="maps_activity_info_banner">
        World Fashion Centre is de plek, waar bestaande en opkomende modemerken/labels zich presenteren.
        U kunt hier uit een ruim en actueel fashion aanbod uw collectie samenstellen.
		</string>
    <string name="content_imageview_for_carrousel">ImageView voor Carrousel</string>
    <string name="content_imageview2_for_carrousel">ImageView2 voor Carrousel, helpt met de animatie</string>
    <string name="content_next_button_carrousel">Next Button Carrousel</string>
    <string name="content_previous_button_carrousel">Previous Button Carrousel</string>

    //strings activity_maps
    <string name="bezoekadres_maps_text"><b>World Fashion Center</b>\nKoningin Wilhelminaplein 13\n1062 HH  Amsterdam\nThe Netherlands</string>
    <string name="bezoekadres_maps_phone">+31 (0) 20 511 01 73</string>
    <string name="tel_number">tel: +31 20 511 01 73</string>
    <string name="start_navigation_button_text">Start navigation (Activate your GPS)</string>
    <string name="details_actionbar_text">Details</string>
    <string name="action_search">action_search</string>

    //Strings activity_navigation_select
    <string name="title_activity_navigation_select">Navigation</string>
    <string name="indoor_navigation_button_text">Indoor</string>
    <string name="outdoor_navigation_button_text">Outdoor</string>
    <string name="indoor_navigation_map_button_text">Indoor Map</string>

    //Strings activity_navigation_indoor
    <string name="title_activity_navigation_indoor">Indoor Navigation</string>
    <string name="no_beacon_text">There are no beacons within range</string>
    <string name="drawer_open">draweropen</string>
    <string name="drawer_close">drawer close</string>

    <string name="title_activity_facility_categorie">FacilityCategorie</string>
    <string name="contact">Contact</string>
    <string name="telnum">Phone Number:&#160;</string>
    <string name="mWebsite">Website:&#160;</string>
    <string name="mEmail">Email:&#160;</string>
    <string name="locatie">Location</string>
    <string name="toren">Tower:&#160;</string>
    <string name="mEtage">Floor:&#160;</string>
    <string name="showroom">Showroom:&#160;</string>
    <string name="mode">Fashion</string>
    <string name="searchFacility">Search facility&#8230;</string>
    <string name="extra_text">Extra</string>
    <string name="meer_info">More Info</string>

    //Strings activity_navigation_indoor_map
    <string name="indoor_maps_title_text">Indoor Map</string>

    <string name="url_viewpager_case_zero">http://bedrijven.worldfashioncentre.nl/WFCCatalogus/#</string>
    <string name="url_viewpager_case_one">http://www.worldfashioncentre.nl/nl-nl/exhibitors/worldfashiontoday.aspx</string>
    <string name="url_viewpager_case_four">http://www.worldfashioncentre.com/nl-nl/exhibitors/tehuur.aspx</string>
    <string name="url_viewpager_case_seven">http://www.worldfashioncentre.nl/nl-nl/exhibitors/nieuwshuurders.aspx?udt_595_param_detail=4005</string>
    <string name="title_activity_navigation_indoor_map">NavigationIndoorMapActivity</string>
    <string name="niet_beschikbaar">Not available</string>
    <string name="emailIcon_string">emailIcon</string>
    <string name="webIcon_string">webIcon</string>
    <string name="phoneIcon_string">phoneIcon</string>
    <string name="beacon_elevator_text">You are near the elevator</string>
    <string name="beacon_lunch_text">You are near the lunch room</string>
    <string name="beacon_workspace_text">You are near the workspace</string>
    <string name="dot_carrousel"><![CDATA[&#8226;]]></string>
</resources>
