<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            tools:context="com.testapplication.wfcmainpage.InfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_title"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            style="@style/TextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/history_text"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/mijlpaal_title"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            style="@style/TextDefault"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/mijlpaal_text"
            android:lineSpacingMultiplier="1.2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/management_title_text"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView

            style="@style/TextDefault"
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/management_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/bezoekadres_title"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            style="@style/TextDefault"
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/bezoekadres_text"
            android:textAppearance="?android:attr/textAppearanceSmall"
          />

    </LinearLayout>
</ScrollView>