<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              tools:context=".FacilitiesActivity">

    <ImageView
        android:id="@+id/customImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/customImage_view"
        android:scaleType="centerCrop"
        android:src="@drawable/logowfcsmall"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/customRowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/customRowText_Medium"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/mediumRowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customRowText"
            android:layout_marginLeft="16dp"
            android:text="@string/customTextRow_Small"
            android:textAppearance="?android:attr/textAppearanceSmall"
            />
    </LinearLayout>
</LinearLayout>