<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainpage_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.testapplication.wfcmainpage.activity.NavigationSelectActivity">

    <com.testapplication.wfcmainpage.views.BetterButton
        android:id="@+id/btnNavigationSelectIndoor"
        style="@style/WFCButtonNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_margin="2dp"
        android:text="@string/indoor_navigation_button_text" />

    <com.testapplication.wfcmainpage.views.BetterButton
        android:id="@+id/btnNavigationSelectIndoorMap"
        style="@style/WFCButtonNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_margin="2dp"
        android:text="@string/indoor_navigation_map_button_text" />

    <com.testapplication.wfcmainpage.views.BetterButton
        android:id="@+id/btnNavigationSelectOutdoor"
        style="@style/WFCButtonNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_margin="2dp"
        android:text="@string/outdoor_navigation_button_text" />
</LinearLayout>
