<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainpage_background"
    android:fillViewport="true"
    tools:context="com.testapplication.wfcmainpage.activity.FacilitiesDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_trans"
        android:orientation="vertical">


        <com.testapplication.wfcmainpage.views.BetterTextView
            android:id="@+id/txtFacilityName"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_background"
            android:paddingBottom="@dimen/spacing_large"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/spacing_large"
            tools:text="Facility name" />


        <com.testapplication.wfcmainpage.views.BetterTextView
            android:id="@+id/contacttext"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/contact" />


        <LinearLayout
            android:id="@+id/row_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_transparent_background"
            android:gravity="center_vertical"
            android:minHeight="@dimen/min_row_height"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/foontext"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_small"
                android:drawableStart="@drawable/call_contact"
                android:gravity="center"
                android:text="@string/telnum" />

            <TextView
                android:id="@+id/txtFoon"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                tools:text="555-123456" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/row_web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_transparent_background"
            android:gravity="center_vertical"
            android:minHeight="@dimen/min_row_height"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/websitetext"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_small"
                android:drawableStart="@drawable/sym_action_web"
                android:gravity="center"
                android:text="@string/mWebsite" />

            <TextView
                android:id="@+id/txtWebsite"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                tools:text="www.m2mobi.com" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_transparent_background"
            android:gravity="center_vertical"
            android:minHeight="@dimen/min_row_height"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/textemail"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/spacing_small"
                android:drawableStart="@drawable/sym_action_email"
                android:gravity="center"
                android:text="@string/mEmail" />

            <TextView
                android:id="@+id/txtEmail"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                tools:text="info@m2mobi.com" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@color/divider" />

        <com.testapplication.wfcmainpage.views.BetterTextView
            android:id="@+id/locatietext"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/locatie" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/towertext"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toren" />

            <TextView
                android:id="@+id/txtTower"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="X" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/etagetext"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mEtage" />

            <TextView
                android:id="@+id/txtEtage"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Floor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/showroomtext"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="@string/showroom" />

            <TextView
                android:id="@+id/txtShowroom"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                tools:text="Z" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="@color/divider" />

        <com.testapplication.wfcmainpage.views.BetterTextView
            android:id="@+id/modetext"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:text="@string/mode" />

        <TextView
            android:id="@+id/txtMode"
            style="@style/TextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            tools:text="Mode" />

    </LinearLayout>
</ScrollView>
