<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainpage_background"
    android:fillViewport="true"
    tools:context="com.testapplication.wfcmainpage.activity.FacilitiesDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_trans"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/imgImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            tools:src="@mipmap/imgt1f11r5" />

        <com.testapplication.wfcmainpage.views.BetterTextView
            android:background="@color/divider"
            android:paddingTop="@dimen/spacing_large"
            android:paddingBottom="@dimen/spacing_large"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/txtType"
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Title" />

        <com.testapplication.wfcmainpage.views.BetterTextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/txtExtra"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/extra_text" />

        <TextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/txtInfo"
            style="@style/TextDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Extras" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:background="@color/divider" />

        <com.testapplication.wfcmainpage.views.BetterTextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/locatietext"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locatie" />

        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/towertext"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toren" />

            <TextView
                android:id="@+id/txtTower"
                style="@style/TextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="X" />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/etagetext"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mEtage" />

            <TextView
                android:id="@+id/txtFloor"
                style="@style/TextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Y" />
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/showroomtext"
                style="@style/TextDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:text="@string/showroom" />

            <TextView
                android:id="@+id/txtRoom"
                style="@style/TextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                tools:text="Z" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:background="@color/divider" />

        <com.testapplication.wfcmainpage.views.BetterTextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/meerInfo"
            style="@style/TextHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meer_info" />

        <TextView
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:id="@+id/txtSite"
            style="@style/TextDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_small"
            android:autoLink="web"
            tools:text="More info" />

    </LinearLayout>
</ScrollView>