<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainpage_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </android.support.v4.view.ViewPager>

    <ImageButton
        android:id="@+id/prevbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/nextbutton"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="90dp"
        android:background="@drawable/prevbuttonimg"/>

    <ImageButton
        android:id="@+id/nextbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="90dp"
        android:background="@drawable/nextbuttonimage" />

    <RelativeLayout
        android:id="@+id/viewPagerIndicator"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/pager"
        android:layout_marginTop="-20dp">


        <LinearLayout
            android:id="@+id/viewPagerCountDots"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/viewPagerIndicator"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"> <!-- This will have 50% of the screen -->
            <Button
                android:id="@+id/rentButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="0.5"
                android:background="@drawable/btn_rent_background"
                android:text="@string/rent_button_text"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/infoButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:layout_weight="0.5"
                android:background="@drawable/btn_info_background"
                android:text="@string/info_button_text"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">  <!-- This will have another 50% of the screen -->
            <Button
                android:id="@+id/facilitiesButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0.5"
                android:background="@drawable/btn_facilities_background"
                android:text="@string/facilities_button_text"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/navigationButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="0.5"
                android:background="@drawable/btn_navigation_background"
                android:text="@string/navigation_button_text"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
